Resolves issue #24. Changes to the CSS produce improved spacing in multi-level lists. Those changes cascaded into additional changes in the CSS for the drop-down menu.

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -350,7 +350,7 @@ body {
 .header-wrapper {
     flex: none;
     margin: 0;
-    padding: 0.5em 0 0;
+    padding: 0.5em 0;
     line-height: 0;
     display: flex;
     flex-direction: row;
@@ -429,6 +429,7 @@ body {
     position: absolute;
     top: 100%;
     left: 0;
+    margin-top: 0.6em;
     white-space: nowrap;
     background: var(--menu-item-subnav-background);
 }
@@ -440,6 +441,8 @@ body {
 
 .menu-item ul li.subNav ul li {
     margin-left: 0;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
     padding-left: 2em;
     padding-right: 2em;
     line-height: 1.7em;
@@ -448,8 +451,9 @@ body {
 /* Styles for the search box. */
 
 .search-container {
-    margin-top: -0.8rem;
+    margin-top: -1.0rem;
     margin-left: 2rem;
+    margin-bottom: 0.5rem;
 }
 
 div.search-container input[type=text] {
@@ -846,7 +850,8 @@ blockquote footer {
 /* Some miscellaneous, simple elements. */
 
 p {
-    margin-bottom: 1em;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 hr {
@@ -862,12 +867,15 @@ li {
     margin-left: 2em;
 }
 
+/*
+
 li:last-child {
     padding-bottom: 1em;
 }
 
 li:first-child {
 }
+*/
 
 /* Some link styling. */
 
